# app-framework

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  Taskfile.yaml  gemini-extension.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: docs_publish.yml  trivy-scan.yml  validate-skills.yml
copier-watch/: copier-watch.py  lib.py  main.py  pyproject.toml
copier-watch/src/: lib.py  main.py
datarobot-app-framework/: SKILL.md
datarobot-app-framework-agent/: SKILL.md
datarobot-app-framework-cicd/scripts/: github-cd.yml  github-deploy.yml  github-destroy.yml  gitlab-ci.yml  pulumi-setup.sh  setup-github-secrets.sh  setup-gitlab-variables.sh  taskfile-snippets.yaml
datarobot-templates-cicd/: README.md  SKILL.md
datarobot-templates-cicd/scripts/: decrypt-secrets.sh  encrypt-secrets.sh  github-deploy.yml  github-destroy.yml  infra-README.md  pulumi-setup.sh  setup-github-secrets.sh  setup-gitlab-variables.sh  taskfile-snippets.yaml
docs/: AGENT_FRAMEWORK_INTEGRATION.md  DEVELOPMENT_AND_CUSTOMIZATION.md  LANGGRAPH_INTEGRATION.md  USAGE_GUIDE.md  properdocs.yml  pyproject.toml
docs/src/: developer.md  index.md  skills.md
skills/datarobot-app-framework/: SKILL.md
skills/datarobot-app-framework-cicd/: README.md  SKILL.md
skills/datarobot-app-framework-doc-update/: SKILL.md  documentation-style-spec.md
tools/af_component_doc_update/: pyproject.toml
tools/af_component_doc_update/af_component_doc_update/: main.py
tools/af_component_doc_update/af_component_doc_update/templates/: README.md.jinja
(+30 files in other folders)
